# luna

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
data/: loggingSettings.txt
data/config/: logging.ini
include/luna/core/: Application.hpp  LunaApplication.hpp
include/luna/logging/: Logging.hpp
src/: main.cpp
src/core/: Application.cpp  LunaApplication.cpp
src/logging/: Logging.cpp
